[tool.poetry]
name = "callcache"
version = "0.1.0"
description = ""
authors = ["anotherdish <anotherdish@anotherdish.dish>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
